--- a/index.html
+++ b/index.html
@@ -5,19 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Olivia Ros</title>
+    <title>Hugo Mansilla</title>
+
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Hoja de estilos -->
     <link rel="stylesheet" href="assets/css/estilos.css">
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -45,6 +54,7 @@
         </div>
     </nav>
 
+    <!-- Header -->
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
@@ -64,7 +74,7 @@
         </div>
     </header>
 
-
+    <!-- Acerca de mi -->
     <section id="Acerca-de-mi" class="container text-center my-5">
 
 
@@ -110,7 +120,7 @@
         </div>
     </section>
 
-
+    <!-- Mis trabajos -->
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
@@ -171,8 +181,7 @@
 
     </section>
 
-
-
+    <!-- Contacto-->
     <section id="Contacto" class="container my-5">
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
@@ -212,13 +221,12 @@
 
     </section>
 
-
-
+    <!-- Footer -->
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Hugo Mansilla 2024. Todos los derechos reservados.</p>
     </footer>
 
-
+    <!-- Javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
