--- a/index.html
+++ b/index.html
@@ -194,7 +194,6 @@
 
         <form>
 
-
             <div class="form-group mb-4">
                 <label class="mb-2">Nombre</label>
                 <input class="form-control" placeholder="Nombre">
@@ -211,11 +210,9 @@
                 <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
             </div>
 
-            <div class="my-3 text-end">
+            <div class="my-3 text-center">
                 <button class="btn btn-info text-light">Enviar</button>
             </div>
-
-
 
         </form>
 
