--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="#">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="#">Viajes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contacto</a>
@@ -55,19 +55,18 @@
     </nav>
 
     <!-- Header -->
-    <header id="Hero-Section" class="text-light text-end py-5 mt-5">
+    <header id="Hero-Section" class="text-light text-center py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
-                <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                <h1 class="display-1 fw-bold my-5 fondo">
+                    Blog de mis viajes
                 </h1>
-                <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                <p class="my-5 fondo">
+                    Este sitio web es un blog de mis viajes por el mundo, espero lo disfrutes y las experiencias puedan ser útiles para ti.
+                    Por favor, si tienes algún comentario, no dudes en contactarme.  
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-outline-info text-light me-4">Viajes</button>
                     <button class="btn btn-lg btn-info text-light">Contacto</button>
                 </div>
             </div>
