Se actualiza la sección Acerca de mi con mi información.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     Por favor, si tienes algún comentario, no dudes en contactarme.  
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Viajes</button>
+                    <button class="btn btn-lg btn-info text-light me-4">Viajes</button>
                     <button class="btn btn-lg btn-info text-light">Contacto</button>
                 </div>
             </div>
@@ -87,33 +87,24 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <i class="fas fa-futbol fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Futbolista de bajo rendimiento</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Juego fútbol al menos 3 veces por semana. Mis amigos dicen que soy bueno para la pelota. 
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <i class="fa fa-code fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Data Scientist</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Trabajo como Jefe de un equipo de Data Scientist en una empresa española.
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <i class="fa fa-user-ninja fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Ex-Karateca</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Antes practicaba Karate todas las semanas, fui seleccionado regional. Me gustaría volver a entrenar ;(
                 </p>
             </div>
         </div>
