--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand marca" href="#">
+            <a class="navbar-brand marca" href="https://github.com/hugomansilla">
                 Hugo Mansilla
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -39,13 +39,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link" href="#Acerca-de-mi">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Viajes</a>
+                        <a class="nav-link" href="#Mis-viajes">Viajes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#Contacto">Contacto</a>
                     </li>
 
                 </ul>
@@ -110,8 +110,8 @@
         </div>
     </section>
 
-    <!-- Mis trabajos -->
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <!-- Mis viajes -->
+    <section id="Mis-viajes" class="my-5 p-5 bg-info">
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis Viajes</h2>
 
